[gd_scene load_steps=3 format=3 uid="uid://diwxb7j1sa7mf"]

[ext_resource type="PackedScene" uid="uid://bsjqdvkt0u87c" path="res://addons/mars-ui/content/ui/components/button/button.tscn" id="1_7pjdx"]
[ext_resource type="Script" path="res://content/scenes/menu/menu_move.gd" id="1_hksr3"]

[node name="MenuMove" type="Node3D"]
script = ExtResource("1_hksr3")

[node name="BtnRight" parent="." instance=ExtResource("1_7pjdx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.085, 0.025, 0)
label = "->"

[node name="BtnLeft" parent="." instance=ExtResource("1_7pjdx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.005, 0.025, 0)
label = "<-"

[node name="BtnUp" parent="." instance=ExtResource("1_7pjdx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0.07, 0)
label = "^"

[node name="BtnDown" parent="." instance=ExtResource("1_7pjdx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, -0.02, 0)
label = "\\/"

[node name="BtnForward" parent="." instance=ExtResource("1_7pjdx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0.053, 0)
label = "Fwd"

[node name="BtnBack" parent="." instance=ExtResource("1_7pjdx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, -0.005, 0)
label = "Back"

[node name="LblX" type="Label3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.186859, 0.064941, 0)
text = "X:"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblXReadout" type="Label3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.166641, 0.064941, 0)
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblY" type="Label3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.186859, 0.0392096, 0)
text = "Y:"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblYReadout" type="Label3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.166641, 0.0392096, 0)
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblZ" type="Label3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.186859, 0.0134783, 0)
text = "Z:"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblZReadout" type="Label3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.166641, 0.0134783, 0)
horizontal_alignment = 0
vertical_alignment = 0
